[gd_scene load_steps=14 format=3 uid="uid://c6og4yap40djr"]

[ext_resource type="Theme" uid="uid://cbc4dyquppe6q" path="res://app/themes/godot4.tres" id="1_mbtuc"]
[ext_resource type="Script" path="res://scenes/main_window/menu_bar.gd" id="1_ws1cv"]
[ext_resource type="Texture2D" uid="uid://0xmcxf521u0c" path="res://icons/plus.svg" id="2_ncvxq"]
[ext_resource type="Texture2D" uid="uid://b2d3ucwu4sdgi" path="res://icons/load.svg" id="3_f6y6p"]
[ext_resource type="Texture2D" uid="uid://cshviyqmq3ep1" path="res://icons/save.svg" id="4_0pfni"]
[ext_resource type="Texture2D" uid="uid://c6nmj72mnhl7c" path="res://icons/undo.svg" id="5_1t4wq"]
[ext_resource type="Texture2D" uid="uid://cwj1wfk1umqc0" path="res://icons/redo.svg" id="6_ckqp3"]
[ext_resource type="Texture2D" uid="uid://cvhe8lggsbgc4" path="res://icons/cross.svg" id="7_y115u"]
[ext_resource type="Texture2D" uid="uid://d1b4sufbvjh11" path="res://icons/tools.svg" id="8_uwam3"]
[ext_resource type="Texture2D" uid="uid://hvgfe01bo011" path="res://icons/link.svg" id="9_2pj3y"]
[ext_resource type="Texture2D" uid="uid://dmvjbeponwep6" path="res://icons/license.svg" id="10_np28w"]
[ext_resource type="Texture2D" uid="uid://pcqi6kynwp8j" path="res://icons/heart.svg" id="11_5ds6i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2gdgx"]
content_margin_left = 5.0
content_margin_right = 5.0
bg_color = Color(0.490196, 0.490196, 0.490196, 0.27451)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="PanelContainer" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_mbtuc")
theme_override_styles/panel = SubResource("StyleBoxFlat_2gdgx")

[node name="MenuBar" type="MenuBar" parent="."]
layout_mode = 2
flat = true
script = ExtResource("1_ws1cv")

[node name="$FILE" type="PopupMenu" parent="MenuBar"]
size = Vector2i(308, 345)
item_count = 13
item_0/text = "$NEW"
item_0/icon = ExtResource("2_ncvxq")
item_0/id = 0
item_1/text = "$OPEN"
item_1/icon = ExtResource("3_f6y6p")
item_1/id = 1
item_2/text = ""
item_2/id = 99
item_2/separator = true
item_3/text = "$SAVE"
item_3/icon = ExtResource("4_0pfni")
item_3/id = 2
item_4/text = "$SAVE_AS"
item_4/icon = ExtResource("4_0pfni")
item_4/id = 3
item_5/text = "$SAVE_ALL"
item_5/icon = ExtResource("4_0pfni")
item_5/id = 4
item_6/text = ""
item_6/id = 99
item_6/separator = true
item_7/text = "$UNDO"
item_7/icon = ExtResource("5_1t4wq")
item_7/id = 5
item_8/text = "$REDO"
item_8/icon = ExtResource("6_ckqp3")
item_8/id = 6
item_9/text = ""
item_9/id = 99
item_9/separator = true
item_10/text = "$CLOSE"
item_10/icon = ExtResource("7_y115u")
item_10/id = 7
item_11/text = ""
item_11/id = 99
item_11/separator = true
item_12/text = "$QUIT"
item_12/id = 8

[node name="$SETTINGS" type="PopupMenu" parent="MenuBar"]
size = Vector2i(202, 100)
item_count = 1
item_0/text = "$EDITOR_SETTINGS"
item_0/icon = ExtResource("8_uwam3")
item_0/id = 0

[node name="$HELP" type="PopupMenu" parent="MenuBar"]
size = Vector2i(170, 114)
item_count = 4
item_0/text = "$ONLINE_HELP"
item_0/icon = ExtResource("9_2pj3y")
item_0/id = 0
item_1/text = ""
item_1/id = 99
item_1/separator = true
item_2/text = "$LICENSE"
item_2/icon = ExtResource("10_np28w")
item_2/id = 1
item_3/text = "$SUPPORT"
item_3/icon = ExtResource("11_5ds6i")
item_3/id = 2

[connection signal="id_pressed" from="MenuBar/$FILE" to="MenuBar" method="_on_file_id_pressed"]
[connection signal="id_pressed" from="MenuBar/$SETTINGS" to="MenuBar" method="_on_settings_id_pressed"]
[connection signal="id_pressed" from="MenuBar/$HELP" to="MenuBar" method="_on_help_id_pressed"]
